ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4

if WITH_BMV2
    MAYBE_BMV2 = bmv2
endif

if WITH_TOFINO
    MAYBE_TOFINO = tofino
endif

if WITH_BMV2TOFINO
    MAYBE_BMV2TOFINO = bmv2-tofino
endif

if WITH_PI
    MAYBE_PI = pi
endif

SUBDIRS = $(MAYBE_BMV2) $(MAYBE_TOFINO) $(MAYBE_BMV2TOFINO) $(MAYBE_PI)
